# xMark

./: .gitignore  CMakeLists.txt  README.md  calculate_disk_usage.cpp  calculate_disk_usage.h  main.cpp  measure_line.cpp  measure_line.h  menu.cpp  menu.h  program_settings.cpp  program_settings.h  select_pixel_color.cpp  select_pixel_color.h  show_date_time.cpp  show_date_time.h  show_system_info.cpp  show_system_info.h  take_area_screenshot.cpp  take_area_screenshot.h  take_full_screenshot.cpp  take_full_screenshot.h
